--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         .top-container {
             display: flex;
             position: relative;
-            background: rgb(123, 167, 247);
+            background: rgb(156, 186, 242);
             width: 100%;
             height: 78px;
             justify-content: center;
@@ -125,7 +125,7 @@
             transition: 0.35s ease;
             color: #000;
             cursor: pointer;
-            background: rgb(123, 167, 247);
+            background: rgb(156, 186, 242);
         }
 
  .Photography-content {
@@ -198,7 +198,7 @@
             transition: 0.35s ease;
             color: #000;
             cursor: pointer;
-            background: rgb(123, 167, 247);
+            background: rgb(156, 186, 242);
         }
 
         .Sport-content {
@@ -272,7 +272,7 @@
             transition: 0.35s ease;
             color: #000;
             cursor: pointer;
-            background: rgb(123, 167, 247);
+            background: rgb(156, 186, 242);
                 }
 
         .Education-content {
@@ -346,7 +346,7 @@
             transition: 0.35s ease;
             color: #000;
             cursor: pointer;
-            background: rgb(123, 167, 247);
+            background: rgb(156, 186, 242);
         }
 
         .Promoter-content {
@@ -420,7 +420,7 @@
             transition: 0.35s ease;
             color: #000;
             cursor: pointer;
-            background: rgb(123, 167, 247);
+            background: rgb(156, 186, 242);
         }
 
         .Contact-content {
@@ -495,7 +495,7 @@
             transition: 0.35s ease;
             color: #000;
             cursor: pointer;
-            background: rgb(123, 167, 247);
+            background: rgb(156, 186, 242);
         }
 
         .Community-content {
@@ -570,7 +570,7 @@
             transition: 0.35s ease;
             color: #000;
             cursor: pointer;
-            background: rgb(123, 167, 247);
+            background: rgb(156, 186, 242);
         }
 
         .TikiYiki-content {
@@ -645,7 +645,7 @@
             transition: 0.35s ease;
             color: #000;
             cursor: pointer;
-            background: rgb(123, 167, 247);
+            background: rgb(156, 186, 242);
         }
 
         .Disability-content {
@@ -1030,7 +1030,7 @@
             position: relative;
             width: 20%;
             height: 79px;
-            background: rgb(123, 167, 247);
+            background: rgb(156, 186, 242);
             justify-content: center;
             align-items: center;
             margin-left: -1.31%; 
@@ -1041,7 +1041,7 @@
             position: relative;
             width: 78%;
             height: 79px;
-            background: rgb(123, 167, 247);
+            background: rgb(156, 186, 242);
             justify-content: center;
             align-items: center;
             margin-left: 7.5%; 
@@ -2824,10 +2824,10 @@ height: auto;
     padding: 15px;
     border-right: 0.11rem solid rgba(221, 221, 221, 0.867);
     border-left: 0.11rem solid rgba(221, 221, 221, 0.867);
-    font-size: 13px; 
     font-family: 'Kanit'; 
-    color:rgb(81, 81, 81); 
-    line-height: 19px;
+    font-size: 12.88px; 
+    color:rgb(90, 89, 89); 
+    line-height: 18.5px;
 }
 
 .B{
@@ -5095,7 +5095,7 @@ function showSlides(n) {
     <h2> 1. Disabilities And Inclusion</h2> 
     <p> 
         <br>
-        <p style="font-size: 12px; font-family: 'georgia'; color: rgb(81, 81, 81); line-height: 16px;">
+        <p style=" font-size: 12.5px; color: rgb(90, 90, 90); line-height: 16px;">
              A. [Definition] According to the <a href="https://languages.oup.com/" target="_blank"> Oxford Languages</a>, inclusion is the practice or policy of providing equal access to opportunities and resources for people who might otherwise be excluded or marginalized, such as those who have physical or intellectual disabilities and members of other minority groups.    
                 <br>
                 <br>
@@ -5379,9 +5379,8 @@ function showSlides(n) {
         <div class="Bu-pics1">
         <h2> Disability And Gender</h2>
     <p> 
-        Take An Approch that consist to first define what is disability and corollary 
-        issues and matters. Dig Into A wider Way including Disability and gender in the society ? 
-        Disability and Culture and many other Aspect Of Any Cultural identity.
+        Take An Approch that consists to first define what is disability, gender and corollary 
+        issues . Dig Into A wider Way including Disability and gender in the society. Get narratives from both gender. ( From a disabled man and a woman)
     </p>
 
     </div>
@@ -5429,7 +5428,8 @@ function showSlides(n) {
     <div class="Bu-pics1">
     <h2>Disability And Transportation</h2>
         
-    <p>Coordinate A Coalition of disabled people and relatives to start a chapter of writing their own stories and histories.
+    <p>Founding a coalition of disabled people or organisations to effort and offer good conditions of lives for disabled people especially in the transportation.  Learn about stories of disabled people who met countless issues with the transportation early and presently nothing changed well for them. It's the same anthemn and same overlooking. Visionning a creation of a non-profit organisation for transportation maybe named "NACADA TRANSPORT" for disabled people including elders or any other disabled person. The organisation will assure a ponctual transportation for all disabled people who will be members. The transportation will assured by any retired driver who need to continue to drive personnally but also to drive another person who is in need but can't It's a humanitary act. 
+         
     </p>
     </div>
 
@@ -6589,8 +6589,4 @@ function showSlides(n) {
 </body>
 
 </html>
-
-
-
-
 
