--- a/index.html
+++ b/index.html
@@ -5121,11 +5121,11 @@ function showSlides(n) {
 <br>
         One of the most simplistic instrument to measure the level of INCLUSION is:
         <br>
-        I. To observe
+        I. To observe and 
         <br>
         II. To question 
         <br>
-        about how things are happening there in terms of social connections and interactions between people. What is the nature of their conversations and how strong, good, bad or mini are they ? What could be the reasons ? Why and how interactions and communications can stand as leverages to learn more about inclusiveness ? How vulnerable people like elders, disabled people or people with difference are treated ? Do and how non-disabled people interact with disabled people in communities ? In person ? By postal or virtual way like cellphones, internet or other ways ? 
+        about how things are happening there in terms of social connections and interactions between people. What is the nature of their conversations and how good, bad, sad or mini are they ? What could be the reasons ? Why and how interactions and communications can stand as leverages for people in the area to learn more about inclusiveness ? How vulnerable people like elders, disabled people or people with difference are treated ? Do and how non-disabled people interact with disabled people in communities ? In person ? By postal or virtual way like cellphones, internet or other ways ? 
         What is the degree of respect and consideration to people with difference and disabled from non-disabled people ?
         <br>
         <br>
@@ -5133,14 +5133,14 @@ function showSlides(n) {
         <b style="font-family:'Kanit'; font-size: 12.5px; color:rgb(0, 140, 255);">
         2-B. Answers can lead to substancial informations about inclusion</b>
         <br>
-        Gathering answers from questions and then compilate them deeply and rationally through analyses in order to stick up a general view about INCLUSION in the chosen community. Probably the answers will emphasize an idea and gives an index to more learn and understand about how inclusion is dealt in the area. But something is clear, for any living community, the existence of connections with comnunications between people, supporting each-other-spirit, is a huge vector to get the community vibrant and to moving ahead in solidarity and cohesion. So there maybe a set of social rules to define how communities are organised to get governed. Leaders of communities have to work hard to keep the commnunity safe in its entirety.
+        Gathering answers from questions and then compilate them deeply and rationally through analyses in order to stick up a general view about INCLUSION in the chosen community. Probably the answers will emphasize an idea and gives an index to more learn and understand about how inclusion is dealt in the area. But something is clear, for any living community, the existence of connections with comnunications between people, supporting each-other-spirit, is a huge vector to get the community vibrant and to moving ahead in solidarity and cohesion. So there maybe a set of social rules to define how communities are organised to get governed. Leaders of communities have to work hard to keep the commnunity safe in its entirety meaning that disabled people should be fairly treated and included.
         <br>
         <br>
         <hr style="color: #858585">
         <b style="font-family:'Kanit'; font-size: 12.5px; color:rgb(0, 140, 255);">
         3-C. Communities, their members and their families matter</b>
         <br>
-        Many members whant to build a family and raise children then having a good life and social interactions. They should respect their communities rules. At the same time talking to each other, giving respect to neighbours, being in solidarity with each other or especially those in need, behaving as social normal rules do recommand, is really imperative and worthy for harmony in the communities. Also interacting and/or helping people in need no matter their cultural or physical difference is a great human value and inclusive because every human-being matters. It is how things should work in every community. It is a way to continue to building a strong and inclusive community. The exercise of observation can be easier ou difficult but is reachable by anyone even it may take a time to come to a conclusion. 
+        There is no doubt many members whant to build families and raise children, have connections and may a good life. There they have to respect their communities rules. At the same time talking to each other, giving respect to neighbours, being in solidarity with each other or especially those in need, behaving as social normal rules do recommand, is really imperative, fundamental and worthy for to make livable communities. Also interacting and/or helping people in need no matter their cultural or physical difference is a great human value and inclusive because every human-being matters. It is how things should work in every community. It is a way to continue to building a strong and inclusive community. The exercise of observation can be easier ou difficult but is reachable by anyone even it may take a time to come to a conclusion. 
         The fact to be able to observe, idealize and summurize some causes of exclusion or inclusion is important. 
         <br>
         <br>
@@ -6607,5 +6607,6 @@ function showSlides(n) {
 </body>
 
 </html>
+
 
 
