--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         .top-container {
             display: flex;
             position: relative;
-            background: rgb(156, 186, 242);
+            background: #fff;
             width: 100%;
             height: 78px;
             justify-content: center;
@@ -936,9 +936,9 @@
         .wrapper {
             display: flex;
             position: relative;
-            background: #f6f6f6;
-            width: 98%;
-            height: 72px;
+            background: #fff;
+            width: 100%;
+            height: 74px;
             flex-wrap: wrap;
             align-items: center;
             justify-content: center;
@@ -1022,7 +1022,7 @@
             height: 80px;
             align-items: center;
             justify-content: space-between;
-            margin-top: -70px;
+            margin-top: -77px;
         }
 
         .cover {
@@ -1030,7 +1030,7 @@
             position: relative;
             width: 20%;
             height: 79px;
-            background: rgb(156, 186, 242);
+            background: #fff;
             justify-content: center;
             align-items: center;
             margin-left: -1.31%; 
@@ -1041,7 +1041,7 @@
             position: relative;
             width: 78%;
             height: 79px;
-            background: rgb(156, 186, 242);
+            background: #fff;
             justify-content: center;
             align-items: center;
             margin-left: 7.5%; 
@@ -5140,7 +5140,7 @@ function showSlides(n) {
         <b style="font-family:'Kanit'; font-size: 12.5px; color:rgb(0, 140, 255);">
         3-C. Communities, their members and their families matter</b>
         <br>
-        There is no doubt many members whant to build families and raise children, have connections and may a good life. There they have to respect their communities rules. At the same time talking to each other, giving respect to neighbours, being in solidarity with each other or especially those in need, behaving as social normal rules do recommand, is really imperative, fundamental and worthy for to make livable communities. Also interacting and/or helping people in need no matter their cultural or physical difference is a great human value and inclusive because every human-being matters. It is how things should work in every community. It is a way to continue to building a strong and inclusive community. The exercise of observation can be easier ou difficult but is reachable by anyone even it may take a time to come to a conclusion. 
+        There is no doubt many members whant to build families and raise children, have connections and may a good life. There they have to respect their communities rules. At the same time talking to each other, giving respect to neighbours, being in solidarity with each other or especially those in need, behaving as social normal rules do recommand, is really imperative, fundamental and worthy to make livable communities. Also interacting and/or helping people in need no matter their cultural or physical difference is a great human value and inclusive because every human-being matters. It is how things should work in every community. It is a way to continue to building a strong and inclusive community. The exercise of observation can be easier ou difficult but is reachable by anyone even it may take a time to come to a conclusion. 
         The fact to be able to observe, idealize and summurize some causes of exclusion or inclusion is important. 
         <br>
         <br>
@@ -5446,7 +5446,7 @@ function showSlides(n) {
     <div class="Bu-pics1">
     <h2>Disability And Transportation</h2>
         
-    <p>Founding a coalition of disabled people or organisations to effort and offer good conditions of lives for disabled people especially in the transportation.  Learn about stories of disabled people who met countless issues with the transportation early and presently nothing changed well for them. It's the same anthemn and same overlooking. Visionning a creation of a non-profit organisation for transportation maybe named "NACADA TRANSPORT" for disabled people including elders or any other disabled person. The organisation wants to create transportation services for disabled people who will be members of NACADA Transport. The transportation will be mainly assured by any retired driver who still driving for themselves or their families after retirement but also want to give back to the communities by giving time to drive any disabled person, member of NACADA Transport. Beyond the activity of services to disabled people they have to drive sometimes depending their agenda, retired drivers can also open new windows to socialize with their volunteering peers and may make friendships in a new team to a great dedication. It's said that it's a humanitary act. 
+    <p>Founding a coalition of disabled people or organisations to effort and offer good conditions in the transportation.  Learn about stories of disabled people who experienced countless issues with transportation early and actually. It looks like nothing changed for them. It's the same anthemn and same overlooking. Visioning a creation of a non-profit organisation for the transportation maybe named "NACADA TRANSPORT" of disabled people including elders or any other disabled person. The organisation wants to create transportation services for disabled people who will be members of NACADA Transport. The transportation will be mainly assured by retired drivers who still want to drive for themselves or their families after their retirement. They also want to give back to the communities by giving time to drive disabled people in need. Beyond the activity of services to disabled people retired drivers can also open new windows to socialize with their volunteering peers and may make friendships in a new team to a great dedication. It's said that it's a humanitary act. 
          
     </p>
     </div>
@@ -6607,6 +6607,7 @@ function showSlides(n) {
 </body>
 
 </html>
+
 
 
 
