--- a/index.html
+++ b/index.html
@@ -1021,7 +1021,7 @@
             width: 100%;
             height: 80px;
             align-items: center;
-            justify-content: space-between;
+            justify-content: center;
             margin-top: -77px;
         }
 
@@ -1033,14 +1033,14 @@
             background: #fff;
             justify-content: center;
             align-items: center;
-            margin-left: -1.31%; 
+            margin-left: -1.35%; 
         }
 
         .cover1 {
             display: flex;
             position: relative;
-            width: 78%;
-            height: 79px;
+            width: 79%;
+            height: 78px;
             background: #fff;
             justify-content: center;
             align-items: center;
@@ -5078,6 +5078,9 @@ function showSlides(n) {
         <img src="https://thumbs.dreamstime.com/b/educational-specialist-service-isolated-cartoon-vector-illustration-247670238.jpg">        
     </div>
       
+    <div class="Bu">
+        <img src="https://dewanpers.or.id/assets/images/event/berita/190930_486-4861568_disability-cartoon.png">        
+    </div>
 
         <div class="Bu">
             <img src="https://diversityq-production.s3.amazonaws.com/uploads/2021/02/disability-inclusion.jpeg">
@@ -5086,6 +5089,7 @@ function showSlides(n) {
                     Disability And Inclusion</figcation>
             </figure>
             </div>
+
             </div>
     
 
@@ -5095,7 +5099,7 @@ function showSlides(n) {
     <h2> 1. Disabilities And Inclusion</h2> 
     <p> 
         <br>
-        <p style=" font-size: 12.5px; color: rgb(90, 90, 90); line-height: 16px;">
+        <p style=" font-size: 12.85px; color: rgb(90, 90, 90); line-height: 18px;">
              A. [Definition] According to the <a href="https://languages.oup.com/" target="_blank"> Oxford Languages</a>, inclusion is the practice or policy of providing equal access to opportunities and resources for people who might otherwise be excluded or marginalized, such as those who have physical or intellectual disabilities and members of other minority groups.    
                 <br>
                 <br>
@@ -5125,15 +5129,17 @@ function showSlides(n) {
         <br>
         II. To question 
         <br>
-        about how things are happening there in terms of social connections and interactions between people. What is the nature of their conversations and how good, bad, sad or mini are they ? What could be the reasons ? Why and how interactions and communications can stand as leverages for people in the area to learn more about inclusiveness ? How vulnerable people like elders, disabled people or people with difference are treated ? Do and how non-disabled people interact with disabled people in communities ? In person ? By postal or virtual way like cellphones, internet or other ways ? 
+        about how things are happening there in terms of socializing, connections and interactions between people. What is the nature of their conversations and how good, bad, sad or mini are they ? 
+        What could be the reasons ? Why and how interactions and communications can stand as leverages for people in the area to learn more about inclusiveness ? How vulnerable people like elders, 
+        disabled people or people with difference are treated ? Do and how non-disabled people interact with disabled people in communities ? In person ? By postal or virtual way like cellphones, internet or other ways ? 
         What is the degree of respect and consideration to people with difference and disabled from non-disabled people ?
         <br>
         <br>
         <hr style="color: #858585">
         <b style="font-family:'Kanit'; font-size: 12.5px; color:rgb(0, 140, 255);">
-        2-B. Answers can lead to substancial informations about inclusion</b>
+        2-B. Answers can lead to better informations about inclusion</b>
         <br>
-        Gathering answers from questions and then compilate them deeply and rationally through analyses in order to stick up a general view about INCLUSION in the chosen community. Probably the answers will emphasize an idea and gives an index to more learn and understand about how inclusion is dealt in the area. But something is clear, for any living community, the existence of connections with comnunications between people, supporting each-other-spirit, is a huge vector to get the community vibrant and to moving ahead in solidarity and cohesion. So there maybe a set of social rules to define how communities are organised to get governed. Leaders of communities have to work hard to keep the commnunity safe in its entirety meaning that disabled people should be fairly treated and included.
+        Gathering answers from questions and then analyze them deeply and rationally in order to stick up a general view about INCLUSION in the chosen community. Probably the answers will emphasize an idea and gives an index to more learn and understand about how inclusion is dealt in the area. But something is clear, for any living community, the existence of connections with comnunications between people, supporting each-other-spirit, is a huge vector to get the community vibrant and to moving ahead in solidarity and cohesion. So there maybe a set of social rules to define how communities are organised to get governed. Leaders of communities have to work hard to keep the commnunity safe in its entirety meaning that disabled people should be fairly treated and included.
         <br>
         <br>
         <hr style="color: #858585">
@@ -6607,7 +6613,5 @@ function showSlides(n) {
 </body>
 
 </html>
-
-
 
 
