--- a/index.html
+++ b/index.html
@@ -5146,7 +5146,7 @@ function showSlides(n) {
         <hr style="color: #858585">
 <b style="font-family:'Kanit'; font-size: 12.5px; color:rgb(0, 140, 255);">1-A. Observations and questions about inclusion in local mentalities</b>    
 <br>
-        In a chosen locality (area, region, place, zone, community) one of the implistic ways to measure the level of INCLUSION is:
+        In a chosen locality (area, region, place, zone, community) one of the simplistic ways to measure the level of INCLUSION is:
         <br>
         I. To observe and then
         <br>
