--- a/index.html
+++ b/index.html
@@ -3995,16 +3995,15 @@ background: #717171;
             justify-content: left;
             justify-items: center;
             width: 100%;
-            padding: 6px;
+            padding: 6.6px;
             height: 50px;
-            border-radius: 0.5rem;
+            border-radius: 1.55rem;
             text-align: left;
-            background: rgba(220, 220, 220, 0.508);
+            background: rgba(10, 30, 249, 0.96);
             line-height: 19px;
             font-family: 'Kanit';
-            font-size: 13px;
-            color:rgb(47, 101, 195);
-            border: 0.12rem solid rgba(60, 93, 182, 0.828)
+            font-size: 12.5px;
+            color: #fff;
         }
           .S:hover{
             background: #111111d3;
@@ -6500,7 +6499,7 @@ function showSlides(n) {
                         
                         <div class="S">19. How will you implement your vision to empower lives of disabled people of your country ?</div>
                         
-                        <div class="S" style="margin-bottom: auto;">20. Who will you choose as part of a working team to implement your vision to get the job done ? <b style="font-size: 10px; color: chocolate; margin-top: -1.25rem; margin-left: 2rem;"> - 1* A team with only disabled people? - 2* A team without disabled people? - 3* Both?</b></div>
+                        <div class="S" style="margin-bottom: auto;">20. Who will you choose as part of a working team to implement your vision to get the job done ? <b style="font-size: 10px; color: yellow; margin-top: -1.25rem; margin-left: 2rem;"> - 1* A team with only disabled people? - 2* A team without disabled people? - 3* Both?</b></div>
                     </div>
 
                     </div>
@@ -6636,6 +6635,7 @@ function showSlides(n) {
 </body>
 
 </html>
+
 
 
 
