--- a/index.html
+++ b/index.html
@@ -1053,7 +1053,7 @@
             flex-direction: column;
             width: 100%;
             height: auto;
-            background: rgb(185, 199, 253);
+            background: transparent;
             justify-content: center;
             align-items: center;
         }
@@ -3884,6 +3884,7 @@ background: #717171;
             height: 50px;
             padding: 10px;
             border-radius: 1.5rem;
+            border: 0.13rem solid #000;
             cursor: pointer;
             margin-top: 1rem;
             margin-bottom: 1rem;
@@ -3928,8 +3929,7 @@ background: #717171;
             font-size: 14.49px;
             color: rgb(44, 78, 164);
             line-height: 22.14px;
-            margin-top: 0.5rem;   
-            box-shadow: 0 0.3px 0.17rem 0.2px rgba(28, 127, 197, 0.986);     
+            margin-top: 0.5rem;      
         }
 
         .Promo:hover{
@@ -5159,7 +5159,7 @@ function showSlides(n) {
         For examples how things are happening there in terms of socializing, connections and interactions between people ? What is the nature of their connections and conversations ? Are there many, few people with difference or disabled ?  
         What could be the reasons ? Why and how connections, interactions and communications can stand as leverages for people to learn more about inclusiveness in a locality ? How vulnerable people like elders, 
         disabled people or people with difference are treated in the locality if they are living in ? Do and how non-disabled people interact with disabled people in communities ? In person ? By postal or virtual way like cellphones, internet or other ways ? 
-        What is the degree of respect and consideration to people with difference and disabled from non-disabled people ?
+        What is the level of respect and consideration that non-disabled people are showing up to disabled people ?
         <br>
         <br>
         <hr style="color: #858585">
@@ -6640,5 +6640,6 @@ function showSlides(n) {
 </body>
 
 </html>
+
 
 
