--- a/index.html
+++ b/index.html
@@ -2012,7 +2012,7 @@ height: auto;
             column-gap: 10px;
             justify-content: space-around;
             justify-items: center;
-            background-color: #ffffffec;
+            background-color: #fffffff8;
             width: 84%;
             height: 295px;
             font-family: 'Kanit';
@@ -2586,7 +2586,7 @@ height: auto;
             column-gap: 5px;
             justify-content: space-between;
             justify-items: center;
-            background-color: rgba(252, 252, 252, 0.515);
+            background-color: rgba(252, 252, 252, 0.791);
             width: 84%;
             height: 600px;
             font-family: 'georgia';
@@ -2638,7 +2638,7 @@ height: auto;
             column-gap: 65px;
             justify-content: center;
             justify-items: center;
-            background-color: rgba(245, 245, 245, 0.436);
+            background-color: rgba(248, 248, 248, 0.914);
             width: 84%;
             height: 600px;
             font-family: 'Kanit';
@@ -2660,7 +2660,7 @@ height: auto;
             width: 84%;
             height: 720px;
             padding: 10px;
-            background: rgba(246, 246, 246, 0.762);
+            background: rgb(255, 255, 255);
             font-family: 'Merienda';
             font-size: 15.75px;
             color: rgb(42, 40, 42);
@@ -4001,7 +4001,7 @@ background: #717171;
             height: 45px;
             border-radius: 1.55rem;
             text-align: left;
-            background: -webkit-linear-gradient(rgba(17, 37, 248, 0.983),rgba(42, 60, 253, 0.778));
+            background: -webkit-linear-gradient(rgba(13, 32, 249, 0.983),rgba(13, 33, 249, 0.671));
             line-height: 16px;
             font-family: 'Kanit';
             font-size: 11.5px;
@@ -6502,7 +6502,7 @@ function showSlides(n) {
                         
                         <div class="S">19. How will you implement your vision to empower lives of disabled people of your country ?</div>
                         
-                        <div class="S" style="margin-bottom: auto;">20. Who will you choose as part of a working team to implement your vision to get the job done ? <b style="font-size: 10px; color: yellow; margin-top: -1.25rem; margin-left: 1rem;"> - 1* A team with only disabled people? - 2* A team without disabled people? - 3* Both?</b></div>
+                        <div class="S" style="margin-bottom: auto;">20. Who will you choose as part of a working team to implement your vision to get the job done ? <b style="font-size: 10px; color: #000; margin-top: -1.25rem; margin-left: 1rem;"> - 1* A team with only disabled people? - 2* A team without disabled people? - 3* Both?</b></div>
                     </div>
 
                     </div>
@@ -6638,4 +6638,5 @@ function showSlides(n) {
 </body>
 
 </html>
+
 
