--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
   background: #fff;
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 4px 0.5rem 0.5px rgb(36, 96, 194);
+  box-shadow: 0 3.5px 0.42rem 0.2px rgb(36, 88, 173);
 }
 
         .Photography-content a {
@@ -211,7 +211,7 @@
   background: #fff;
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 4px 0.5rem 0.5px rgb(36, 96, 194);
+  box-shadow: 0 3.5px 0.42rem 0.2px rgb(36, 88, 173);
    }
 
         .Sport-content a {
@@ -285,7 +285,7 @@
   height: 155px;
   justify-content: center;
   align-items: center;
-  box-shadow: 0 4px 0.5rem 0.5px rgb(36, 96, 194);
+  box-shadow: 0 3.5px 0.42rem 0.2px rgb(36, 88, 173);
    }
 
         .Education-content a {
@@ -359,7 +359,7 @@
   justify-content: center;
   align-items: center;
   z-index: 1;
-  box-shadow: 0 4px 0.5rem 0.5px rgb(36, 96, 194);
+  box-shadow: 0 3.5px 0.42rem 0.2px rgb(36, 88, 173);
     }
 
         .Promoter-content a {
@@ -433,7 +433,7 @@
   justify-content: center;
   align-items: center;
   z-index: 1;
-  box-shadow: 0 4px 0.5rem 0.5px rgb(36, 96, 194);
+  box-shadow: 0 3.5px 0.42rem 0.2px rgb(36, 88, 173);
  }
 
         .Contact-content a {
@@ -508,7 +508,7 @@
   background: #fff;
   padding: 1px;
   z-index: 1;
-  box-shadow: 0 4px 0.5rem 0.5px rgb(36, 96, 194);
+  box-shadow: 0 3.5px 0.42rem 0.2px rgb(36, 88, 173);
    } 
 
         .Community-content a {
@@ -584,7 +584,7 @@
   justify-content: center;
   align-items: center;
   margin-left: 45px;
-  box-shadow: 0 4px 0.5rem 0.5px rgb(36, 96, 194);
+  box-shadow: 0 3.5px 0.42rem 0.2px rgb(36, 88, 173);
    }
 
         .TikiYiki-content a {
@@ -658,7 +658,7 @@
   height: 158px;
   justify-content: center;
   align-items: center;
-  box-shadow: 0 4px 0.5rem 0.5px rgb(36, 96, 194);
+  box-shadow: 0 3.5px 0.42rem 0.2px rgb(36, 88, 173);
   }
 
         .Disability-content a {
@@ -1526,16 +1526,12 @@
         }
 
         ::-webkit-scrollbar-track-piece {
-            background: rgba(254, 254, 254, 0.986);
+            background: rgba(213, 219, 255, 0.806);
         }
 
         ::-webkit-scrollbar-thumb {
-            background: rgba(120, 120, 120, 0.964);
+            background: rgb(131, 141, 248);
             padding: 10px;
-        }
-
-        ::-webkit-scrollbar-track-piece:hover {
-            background: rgb(255, 255, 255);
         }
 
         .content1 {
@@ -2173,7 +2169,7 @@ height: auto;
             column-gap: 2px;
             justify-content: space-around;
             justify-items: center;
-            background-color: rgba(250, 250, 250, 0.939);
+            background-color: rgba(253, 253, 253, 0.966);
             width: 84%;
             height: 630px;
             font-family: 'Kanit';
@@ -2584,7 +2580,7 @@ height: auto;
             column-gap: 5px;
             justify-content: space-between;
             justify-items: center;
-            background-color: rgba(252, 252, 252, 0.791);
+            background-color: rgba(250, 250, 250, 0.881);
             width: 84%;
             height: 600px;
             font-family: 'georgia';
@@ -2636,7 +2632,7 @@ height: auto;
             column-gap: 65px;
             justify-content: center;
             justify-items: center;
-            background-color: rgba(248, 248, 248, 0.914);
+            background-color: rgba(251, 251, 251, 0.932);
             width: 84%;
             height: 600px;
             font-family: 'Kanit';
@@ -2658,7 +2654,7 @@ height: auto;
             width: 84%;
             height: 720px;
             padding: 10px;
-            background: rgb(255, 255, 255);
+            background: rgba(251, 251, 251, 0.983);
             font-family: 'Merienda';
             font-size: 15.75px;
             color: rgb(42, 40, 42);
@@ -3803,10 +3799,8 @@ background: #717171;
             display: flex;
             position: relative;
             top: 25px;
-            background: rgba(126, 160, 247, 0.207);
-            border-bottom: none;
-            color: rgba(29, 77, 121, 0.949);
-            padding: 7px;
+            background: rgba(119, 155, 246, 0.207);
+            color: rgb(58, 108, 179);
             flex-direction: column;
             justify-content: center;
             align-items: center;
@@ -3816,7 +3810,6 @@ background: #717171;
             height: 45px;
             font-family: 'Kanit';
             font-size: 15.5px;
-            border-radius: 0.25rem;
             margin-top: -1.5rem;
         }
 
@@ -3833,20 +3826,19 @@ background: #717171;
             grid-template-columns: 1fr;
             justify-content: center;
             justify-items: center;
-            color:#1383acfa;
+            color: red;
             font-size: 22px;
             font-family: 'Kanit';
             width: 100%;
             height: 45px;
-            padding: 10px;
+            padding-bottom: 10px;
             cursor: pointer;
-            border-radius: 0.5rem;
+            border-bottom: 0.12rem solid green;
         }
 
         .disabled:hover{
-            color: red;
+            color:#000;
             transition: 0.15s linear;
-            border-radius: 0.5rem;
             background: #fff;
         }
 
@@ -3859,9 +3851,8 @@ background: #717171;
             padding: 10px;
             height: 138px;
             width: 84%;
-            background-color: #ffffffec;
             color: #000;
-            margin-top: 2.5rem;
+            margin-top: 2.45rem;
         }
 
         .TOPE{
@@ -6633,6 +6624,7 @@ function showSlides(n) {
 </body>
 
 </html>
+
 
 
 
