--- a/index.html
+++ b/index.html
@@ -5157,8 +5157,8 @@ function showSlides(n) {
         <b style="font-family:'Kanit'; font-size: 12.5px; color:rgb(0, 140, 255);">
         3-C. Communities, their members and their families matter</b>
         <br>
-        There is no doubt many members whant to build families and raise children, have connections and may a good life. There they have to respect their communities rules. At the same time talking to each other, giving respect to neighbours, being in solidarity with each other or especially those in need, behaving as social normal rules do recommand, is really imperative, fundamental and worthy to make livable communities. Also interacting and/or helping people in need no matter their cultural or physical difference is a great human value and inclusive because every human-being matters. It is how things should work in every community. It is a way to continue to building a strong and inclusive community. The exercise of observation can be easier ou difficult but is reachable by anyone even it may take a time to come to a conclusion. 
-        The fact to be able to observe, idealize and summurize some causes of exclusion or inclusion is important. 
+      There is no doubt that many members want to build families, raise their children, make social connections and may have good life.  And that, they have to respect their communities rules. At the same time, talking to each other, respecting neighbours, being in solidarity with each other or with those who are especially in need, behaving as social norms do recommand, is really imperative, fundamental and worthy to make livable communities. Also interacting and/or helping people in need no matter their cultural or physical difference is a great human value and inclusive because every human-being matters. It is how things should work in every community. It is a way to continue to build a strong and inclusive community where everyone is represented. The act of observing can be easier ou difficult but is feasable by anyone even it can take a time to come to a conclusion. 
+        The fact to be able to observe and idealize some causes of exclusion or inclusion is important and may lead to a self-making conclusion. 
         <br>
         <br>
         <hr style="color: #858585">
@@ -6624,7 +6624,5 @@ function showSlides(n) {
 </body>
 
 </html>
-
-
 
 
