--- a/index.html
+++ b/index.html
@@ -3971,6 +3971,8 @@ background: #717171;
 
         .SurvA{
             display: grid;
+            justify-content: center;
+            justify-items: center;
             grid-template-rows: repeat(1fr,1fr);
             row-gap: 0.65rem;
         }
@@ -3980,14 +3982,14 @@ background: #717171;
             grid-template-rows: 1fr;
             justify-content: left;
             justify-items: center;
-            width: 100%;
+            width: 90%;
             padding-top: 6px;
             padding-right: 8px;
             padding-left: 14px;
             height: 45px;
             border-radius: 1.55rem;
             text-align: left;
-            background: -webkit-linear-gradient(rgba(13, 32, 249, 0.983),rgba(13, 33, 249, 0.54));
+            background: -webkit-linear-gradient(rgb(18, 37, 246),rgba(18, 37, 246, 0.685));
             line-height: 16px;
             font-family: 'Kanit';
             font-size: 11.5px;
@@ -6488,7 +6490,7 @@ function showSlides(n) {
                         
                         <div class="S">19. How will you implement your vision to empower lives of disabled people of your country ?</div>
                         
-                        <div class="S" style="margin-bottom: auto;">20. Who will you choose as part of a working team to implement your vision to get the job done ? <b style="font-size: 10px; color: #000; margin-top: -1.25rem; margin-left: 1rem;"> - 1* A team with only disabled people? - 2* A team without disabled people? - 3* Both?</b></div>
+                        <div class="S" style="margin-bottom: auto;">20. Who will you choose as part of a working team to implement your vision to get the job done ? <b style="font-size: 9px; color: #000; margin-top: -1.25rem; margin-left: 1rem;"> - 1* A team with only disabled people? - 2* A team without disabled people? - 3* Both?</b></div>
                     </div>
 
                     </div>
@@ -6624,5 +6626,4 @@ function showSlides(n) {
 </body>
 
 </html>
-
 
